change bookings, rooms, treatments, database, css

--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -264,7 +264,7 @@ nav ul {
 .motto {
     min-height: 500px;
     min-width: 1000px;
-    background-image: url('https://i.picsum.photos/id/631/1000/500.jpg');
+    background-image: url('https://images.tinypic.pl/i/01008/g66fuzk8o3vw.jpg');
     background-repeat: no-repeat;
     transform: translateX(-5rem);
 }
